# badactors

./: .travis.yml  README.md  setup.cfg
badactors/: badactors.py  reallybadactors.py  twostrikes.py
